# degeneratr

./: .env.example  .gitignore  README.md  bt_ivrank.json  bt_momentum.json  pyproject.toml  render.yaml  sweep_results.json  viz_ivrank.json
.claude/: launch.json
degeneratr/: __init__.py  __main__.py  config.py  engine.py  marketclock.py
degeneratr/api/: __init__.py  app.py  models.py  routes.py
degeneratr/api/static/: app.js  index.html  style.css
degeneratr/backtester/: __init__.py  engine.py  synthetic.py  underlying.py
degeneratr/broker/: __init__.py  base.py  moomoo.py  paper.py
degeneratr/data/: __init__.py  base.py  factory.py  tiger.py  yfinance_provider.py
degeneratr/indicators/: __init__.py  technical.py
degeneratr/notify/: __init__.py  telegram.py  watcher.py
degeneratr/risk/: __init__.py  manager.py
degeneratr/scanner/: __init__.py  universe.py
degeneratr/storage/: __init__.py  backfill.py  ingest.py  pipeline.py  provider.py  store.py
degeneratr/strategies/: __init__.py  base.py  combined.py  iv_rank.py  momentum.py  price_action.py  replay.py  zero_dte.py
scripts/: run_and_export.py  sweep.py  sweep_improve.py  sweep_yf.py  yf_timeframe.py
